test/asm/sym-collision.err
error: sym-collision.asm(25):
    Interpolated symbol "dork" does not exist
error: Assembly aborted (1 error)!
